--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DEBUG = False
 SECRET_KEY = django-insecure-_@-6pd!lx&k00cj3(_(yi96l#=y64s$k)$*dr)+hdpb%es@p4s
-MYSQL_DBNAME = vegetableshop$default
-MYSQL_USER = vegetableshop
-MYSQL_PASSWORD = novaia10
-MYSQL_HOST = vegetableshop.mysql.pythonanywhere-services.com
+MYSQL_DBNAME = sazhnevshop$default
+MYSQL_USER = sazhnevshop
+MYSQL_PASSWORD = mart2024
+MYSQL_HOST = sazhnevshop.mysql.pythonanywhere-services.com
